12 - Access Applications in a Cluster/ingress/example-ingress2.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host: hello-world.info
   http:
     paths:
     - path: /*
       backend:
         serviceName: web
         servicePort: 8080
     - path: /v2/*
       backend:
         serviceName: web2
         servicePort: 8080
